1996-09-13  Thomas E. Dickey  <dickey@clark.net>

	* RELEASE: RCS_BASE

	* src/dirpath.c: fix a bug in wildcards mixed with rooted logicals

1995-11-16  Thomas E. Dickey  <dickey@clark.net>

	* src/dirent.c: auto-adjust widths of 'size' and 'allocated' columns

1995-11-15  Thomas E. Dickey  <dickey@clark.net>

	* src/dds.c: added 'Size', 'Allocated' column types

	* src/dirent.h: lengthend 'ccolumns[]' to 9, for 'fsize', 'fallc'

	* src/acplook.c: oops: SWAP wasn't shifting the high-16 back up!

1995-10-28  Thomas E. Dickey  <dickey@clark.net>

	* src/snapshot.c:
	rewrote using rmsio, so user can exploit the file-sharing (and inspect
	the output of this module w/o stopping flist)

	* src/rmsio.c:
	use shared flags on write also; this lets us inspect the logfile as it's
	being written

1995-10-27  Thomas E. Dickey  <dickey@clark.net>

	* src/flcrea.c: got this to work with VAX-C (no more AXP available)

	* src/dclarg.c:
	suppress status from sys$parse if it's directory-not-found (prevents
	us from getting into the flcrea() function).
	also, trim off ".;" if it results from an empty match (messes up the
	testing in 'looks_like_directory()')

	* doc/flist.mem, doc/browse.mem:
	regenerated after adding create-command

	* src/fl.c: typo (from sourced-in patch)

	* doc/flist.hlp: regenerated after adding create-command

	* src/browse.c, src/version.c: release-version

	* doc/db.rno, doc/d2.rno: added CREATE command

	* src/dircmd.h: added extern for 'flcrea()'

	* src/flcrea.c: RCS_BASE

	* src/descrip.mms, src/build.com: added module 'FLCREA'

	* src/dircmd2.h: added symbol 'v_1d' for "create" command

	* src/dircmd.c: added "create" command

	* src/flist.bug: deleted some obsolete entries

	* src/rmsio.c: added flags to enable shared-read

1995-10-26  Thomas E. Dickey  <dickey@clark.net>

	* src/inspect.c:
	oops: return value from 'rgetr()' is int, not unsigned.

	* src/fl.c: fixed shadowed-variable that broke FlistTellVA.